--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 			    	<li><a href="/research">Research</a></li>
 				<li><a href="/teaching">Teaching</a></li>
 				<li><a href="/resources">Resources</a></li>
+				<li><a href="/covid19">COVID-19</a></li>
 				<li><a href="/join">Join The Lab</a><li>
 	    		</ul>
 			</nav>
