--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 		
 		<header>
 			<h2 style="margin-bottom=5px" style="margin-right=2px"><font size="6"><strong> Easton R. White</strong></font><img src="/images/EWhite2019_0.jpeg" alt="Easton White Headshot" style="float:left;height:80px;"></br>
-			<font size="4"><i><span style="font-weight:normal"> Quantitative Ecology - Data Science - Complex Systems</i></span></font></h2>
+			<font size="4"><i><span style="font-weight:normal"> Quantitative Ecology - Data Science - Sustainability</i></span></font></h2>
   		</header>
 		
 		
