--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<!-- SEO -->
 			<meta name="description" content="A website for Easton White">
-			<meta name="keywords" content="Quantitative, Ecology, Theoretical, Fisheries, Science, Education, Math, Modeling">
+			<meta name="keywords" content="Quantitative, Ecology, Marine, Theoretical, Fisheries, Science, Education, Math, Modeling">
 		</head>
 		
 		<header>
@@ -39,7 +39,7 @@
 			<footer>
 	    		<ul>
 				<div style="text-align:center">
-            			<li><img src="/images/icon_email.png" alt="email icon" style="height:20px;"> <a href="mailto:easton.white@uvm.edu">easton.white@uvm.edu</a></li>
+            			<li><img src="/images/icon_email.png" alt="email icon" style="height:20px;"> <a href="mailto:Easton.White@unh.edu">Easton.White@unh.edu</a></li>
         			<li><img src="/images/icon_git.png" alt="git icon" style="height:20px;">  <a href="https://github.com/eastonwhite">github.com/eastonwhite</a></li>
 				<li><img src="/images/icon_twitter.png" alt="twitter icon" style="height:20px;">   <a href="https://twitter.com/eastonrwhite">@eastonrwhite</a></li> </div>
 			</ul>
